log/build_2024-05-17_20-35-14/alma_ultrasound/stdout_stderr.log
running egg_info
writing ../../build/alma_ultrasound/alma_ultrasound.egg-info/PKG-INFO
writing dependency_links to ../../build/alma_ultrasound/alma_ultrasound.egg-info/dependency_links.txt
writing entry points to ../../build/alma_ultrasound/alma_ultrasound.egg-info/entry_points.txt
writing requirements to ../../build/alma_ultrasound/alma_ultrasound.egg-info/requires.txt
writing top-level names to ../../build/alma_ultrasound/alma_ultrasound.egg-info/top_level.txt
reading manifest file '../../build/alma_ultrasound/alma_ultrasound.egg-info/SOURCES.txt'
adding license file 'LICENSE'
writing manifest file '../../build/alma_ultrasound/alma_ultrasound.egg-info/SOURCES.txt'
running build
running build_py
copying alma_ultrasound/ultrasound_pub.py -> /home/pi/robotik_alma_ws/build/alma_ultrasound/build/lib/alma_ultrasound
running install
running install_lib
copying /home/pi/robotik_alma_ws/build/alma_ultrasound/build/lib/alma_ultrasound/ultrasound_pub.py -> /home/pi/robotik_alma_ws/install/alma_ultrasound/lib/python3.10/site-packages/alma_ultrasound
byte-compiling /home/pi/robotik_alma_ws/install/alma_ultrasound/lib/python3.10/site-packages/alma_ultrasound/ultrasound_pub.py to ultrasound_pub.cpython-310.pyc
  File "/home/pi/robotik_alma_ws/install/alma_ultrasound/lib/python3.10/site-packages/alma_ultrasound/ultrasound_pub.py", line 8
    def__init__(self):
                     ^
SyntaxError: invalid syntax

running install_data
copying package.xml -> /home/pi/robotik_alma_ws/install/alma_ultrasound/share/alma_ultrasound
running install_egg_info
removing '/home/pi/robotik_alma_ws/install/alma_ultrasound/lib/python3.10/site-packages/alma_ultrasound-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../../build/alma_ultrasound/alma_ultrasound.egg-info to /home/pi/robotik_alma_ws/install/alma_ultrasound/lib/python3.10/site-packages/alma_ultrasound-0.0.0-py3.10.egg-info
running install_scripts
Installing ultrasound_pub script to /home/pi/robotik_alma_ws/install/alma_ultrasound/lib/alma_ultrasound
writing list of installed files to '/home/pi/robotik_alma_ws/build/alma_ultrasound/install.log'
